Got rough layout for about, banner, and navbar

--- a/source/assets/stylesheets/pages/_index.scss
+++ b/source/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,25 @@
 // Import page-specific CSS files here.
 @import "home";
+@import "banner";
+
+a {
+  display: inline-block;
+  background-color: white;
+}
+
+div#blue {
+  background-color: blue;
+}
+div#red {
+  background-color: red;
+}
+div#green {
+  background-color: green;
+}
+div#yellow {
+  background-color: yellow;
+}
+
+.flex-container{
+  display:flex;
+}
