--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,8 @@
-<div class="container mt-3">
-  <div class="row justify-content-center">
-    <div class="col">
-      <h1>Middleman Boilerplate</h1>
-    </div>
-  </div>
-</div>
+<!-- Banner Section -->
+<%= partial 'partials/banner' %>
+<!-- About Section -->
+<%= partial 'partials/about' %>
+<!-- Projects Section -->
+<%#= partial 'partials/projects' %>
+<!-- Contact Section -->
+<%#= partial 'partials/contact' %>
