--- a/source/assets/stylesheets/pages/_index.scss
+++ b/source/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,7 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "banner";
+@import "about";
 
 a {
   display: inline-block;
@@ -18,8 +19,4 @@ div#green {
 }
 div#yellow {
   background-color: yellow;
-}
-
-.flex-container{
-  display:flex;
 }
