--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="container mb-6">
   <div class="flex-container" id="about">
-    <img style="display: inline;" class="img-square" src="assets/images/profile.jpg" alt="profile">
-    <div class="vertical-flex-cotnainer">
-      <h1>👋 Hello! I'm Sae!</h1>
-      <p>I am passionate about bringing other people’s visions to life while exceeding their expectations. I love the problem-solving aspect of design and web development and how both are
-        incorporated into our daily lives. I want to work in a meaningful, challenging, and international company that allows me to develop myself and have the scope for advancement.
-      </p>
+    <div class="parent">
+      <img style="display: inline;" class="image1 img-square" src="assets/images/profile.jpg" alt="profile">
+      <img class="image2" src="assets/images/signature.png" alt="signature">
     </div>
+    <p class="about-text">I am passionate about bringing other people’s visions to life while exceeding their expectations. I love the problem-solving aspect of design and web development and how both are
+      incorporated into our daily lives. I want to work in a meaningful, challenging, and international company that allows me to develop myself and have the scope for advancement.
+    </p>
   </div>
 </div>
