--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,6 +1,7 @@
 <div class="fullscreen">
   <div class="main-container" id="banner">
     <h2>A Bilingual <a href="https://saeshikiji.myportfolio.com/work" target=_blank>Graphic Designer</a></h2>
-    <h2>and Frontend Developer in Tokyo</h2>
+    <h2>Who Can Code</h2>
+    <h1>Based in Tokyo, Japan</h1>
   </div>
 </div>
