--- a/source/assets/stylesheets/components/_navbar.scss
+++ b/source/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,15 @@
 .navbar-lewagon {
   justify-content: space-between;
+  background:#fff1e6;
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-brand img {
+.navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+.navbar-lewagon a{
+  background-color: #fff1e6;
 }
