--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,4 +1,4 @@
-<div class="container mb-6">
+<div class="container">
   <div class="flex-container" id="about">
     <div class="parent">
       <img style="display: inline;" class="image1 img-square" src="assets/images/profile.jpg" alt="profile">
