--- a/source/partials/_navbar.html.erb
+++ b/source/partials/_navbar.html.erb
@@ -7,14 +7,14 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">About</a>
+      <li class="nav-item">
+        <a class="smooth" href="#about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+        <a class="smooth" href="#">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="smooth" href="#">Contact</a>
       </li>
     </ul>
   </div>
