--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="flex-container" id="about">
+<div class="container" id="about">
+  <div class="flex-container">
     <div class="parent">
       <img style="display: inline;" class="image1 img-square" src="assets/images/profile.jpg" alt="profile">
       <img class="image2" src="assets/images/signature.png" alt="signature">
