--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,6 @@
 <!-- About Section -->
 <%= partial 'partials/about' %>
 <!-- Projects Section -->
-<%#= partial 'partials/projects' %>
+<%= partial 'partials/project' %>
 <!-- Contact Section -->
 <%#= partial 'partials/contact' %>
