--- a/source/assets/stylesheets/pages/_banner.scss
+++ b/source/assets/stylesheets/pages/_banner.scss
@@ -1,14 +1,21 @@
-h2{
-  text-align: center;
-  font-size: 60px;
+.main-container h1{
+  color: white;
+  font-size: 76px;
 }
+
+.main-container h2{
+  text-align: center;
+  font-size: 48px;
+  color: $blue;
+}
+
 .main-container a{
-  color: brown;
-  background-color: #fff1e6;
+  color: $orange;
+  background-color: $beige;
   &:hover{
     text-decoration: line-through;
-    color: brown;
-    background-color: #fff1e6;
+    color: $orange;
+    background-color: $beige;
   }
 }
 
@@ -20,5 +27,42 @@ h2{
   flex-direction: column;
   justify-content: center;
   margin-top: -50px;
-  background-color: #fff1e6;
+  background-color: $beige;
+}
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
+  .main-container h1{
+    font-size: 72px;
+  }
+  .main-container h2{
+    font-size: 44px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+  .main-container h1{
+    font-size: 56px;
+  }
+  .main-container h2{
+    font-size: 36px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
+  .main-container h1{
+    font-size: 56px;
+  }
+  .main-container h2{
+    font-size: 24px;
+  }
 }
