--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,9 +14,11 @@
     <%= favicon_tag 'favicon.ico' %>
     <%= stylesheet_link_tag "app" %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   </head>
   <body>
     <%= partial 'partials/navbar' %>
+    <%= partial 'partials/snsnavbar' %>
     <%= yield %>
     <%= javascript_include_tag "bundle" %>
   </body>
