--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,7 +1,8 @@
 <div class="fullscreen">
   <div class="main-container" id="banner">
-    <h2>A Bilingual <a href="https://saeshikiji.myportfolio.com/work" target=_blank>Graphic Designer</a></h2>
-    <h2>Who Can <a href="https://github.com/Sae-S" target=_blank>Code</a></h2>
-    <h1>Based in Tokyo, Japan</h1>
+    <h1>A Bilingual <a href="https://saeshikiji.myportfolio.com/work" target=_blank>Graphic Designer</a></h1>
+    <h1>Who Can <a href="https://github.com/Sae-S" target=_blank>Code</a></h1>
+    <p><span id="animate"></span></p>
+    <h2>Based in Tokyo, Japan</h2>
   </div>
 </div>
