--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,8 +1,7 @@
 <div class="fullscreen">
   <div class="main-container" id="banner">
     <h1>A Bilingual <a href="https://saeshikiji.myportfolio.com/work" target=_blank>Graphic Designer</a></h1>
-    <h1>Who Can <a href="https://github.com/Sae-S" target=_blank>Code</a></h1>
-    <p><span id="animate"></span></p>
+    <h1><span id="animate"></span></h1>
     <h2>Based in Tokyo, Japan</h2>
   </div>
 </div>
