--- a/source/partials/project.html.erb
+++ b/source/partials/project.html.erb
@@ -1,5 +1,5 @@
 <div class="page">
-  <h1>PROJECTS</h1>
+  <h1>WEB APP PROJECTS</h1>
   <!-- tabs -->
   <div class="pcss3t pcss3t-effect-scale pcss3t-theme-1">
     <input type="radio" name="pcss3t" checked  id="tab1"class="tab-content-first">
@@ -13,23 +13,41 @@
     <ul>
       <li class="tab-content tab-content-first typography">
         <h1>renRAKU - Communicate More, Do Less</h1>
-        <p>Serbian-American inventor, electrical engineer, mechanical engineer, physicist, and futurist best known for his contributions to the design of the modern alternating current (AC) electrical supply system.</p>
-        <p>Tesla started working in the telephony and electrical fields before emigrating to the United States in 1884 to work for Thomas Edison. He soon struck out on his own with financial backers, setting up laboratories/companies to develop a range of electrical devices. His patented AC induction motor and transformer were licensed by George Westinghouse, who also hired Tesla as a consultant to help develop an alternating current system. Tesla is also known for his high-voltage, high-frequency power experiments in New York and Colorado Springs which included patented devices and theoretical work used in the invention of radio communication, for his X-ray experiments, and for his ill-fated attempt at intercontinental wireless transmission in his unfinished Wardenclyffe Tower project.</p>
-        <p class="text-right"><em><a href="http://en.wikipedia.org/wiki/Nikola_Tesla" target="_blank">Checkout the code</a></em></p>
-        <p class="text-right"><em><a href="http://en.wikipedia.org/wiki/Nikola_Tesla" target="_blank">Visit the site</a></em></p>
+        <p>Role: Project Manager and Back End</p>
+        <p>renRAKU replaces 連絡帳(Renrakuchou), paper note books that teachers in Japan use to communicate with parents. It allows writing daily notes to parents/teachers, uploading of schedules, creation of school/class events, posting grades for individual students, and scheduling of parent/teacher meetings.</p>
+        <!-- Slideshow container -->
+        <div class="slideshow-container">
+          <!-- Full-width images with number and caption text -->
+          <div class="mySlides fade">
+            <%= image_tag '1-1.png', style: "width:100%" %>
+          </div>
+          <div class="mySlides fade">
+            <%= image_tag '1-2.png', style: "width:100%" %>
+          </div>
+          <div class="mySlides fade">
+            <%= image_tag '1-3.png', style: "width:100%" %>
+          </div>
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <p class="text-right"><em><a href="https://github.com/teslazonda/renRAKU" target="_blank">CODE</a></em></p>
+        <p class="text-right"><em><a href="https://www.renrakuchou.com/" target="_blank">WEBSITE</a></em></p>
       </li>
       <li class="tab-content tab-content-2 typography">
         <h1>Doppelganger Finder - AirBnB Clone</h1>
-        <p>Italian Renaissance polymath: painter, sculptor, architect, musician, mathematician, engineer, inventor, anatomist, geologist, cartographer, botanist, and writer. His genius, perhaps more than that of any other figure, epitomized the Renaissance humanist ideal. Leonardo has often been described as the archetype of the Renaissance Man, a man of "unquenchable curiosity" and "feverishly inventive imagination". He is widely considered to be one of the greatest painters of all time and perhaps the most diversely talented person ever to have lived. According to art historian Helen Gardner, the scope and depth of his interests were without precedent and "his mind and personality seem to us superhuman, the man himself mysterious and remote". Marco Rosci states that while there is much speculation about Leonardo, his vision of the world is essentially logical rather than mysterious, and that the empirical methods he employed were unusual for his time.</p>
-        <p class="text-right"><em>Find out more about Leonardo da Vinci from <a href="http://en.wikipedia.org/wiki/Leonardo_da_Vinci" target="_blank">Wikipedia</a>.</em></p>
+        <p>Role: Project Manager and Back End</p>
+        <p>An Airbnb clone for renting celebrity look-a-likes</p>
+        <p class="text-right"><em><a href="https://github.com/teslazonda/Doppelganger-Finder" target="_blank">CODE</a></em></p>
+        <p class="text-right"><em><a href="https://doppelganger-finder.herokuapp.com/" target="_blank">WEBSITE</a></em></p>
       </li>
       <li class="tab-content tab-content-3 typography">
         <h1>Movies Watch-List</h1>
-        <p>German-born theoretical physicist who developed the general theory of relativity, one of the two pillars of modern physics (alongside quantum mechanics). While best known for his mass–energy equivalence formula E = mc2 (which has been dubbed "the world's most famous equation"), he received the 1921 Nobel Prize in Physics "for his services to theoretical physics, and especially for his discovery of the law of the photoelectric effect". The latter was pivotal in establishing quantum theory.</p>
-        <p>Near the beginning of his career, Einstein thought that Newtonian mechanics was no longer enough to reconcile the laws of classical mechanics with the laws of the electromagnetic field. This led to the development of his special theory of relativity. He realized, however, that the principle of relativity could also be extended to gravitational fields, and with his subsequent theory of gravitation in 1916, he published a paper on the general theory of relativity.</p>
-        <p class="text-right"><em>Find out more about Albert Einstein from <a href="http://en.wikipedia.org/wiki/Albert_Einstein" target="_blank">Wikipedia</a>.</em></p>
-      </li>
-      <%# <li class="tab-content tab-content-last typography">
+        <p>Role: Full-Stack</p>
+        <p>You can organize your favorite movies in genre lists, add ratings, and add comments.</p>
+        <p class="text-right"><em><a href="https://github.com/Sae-S/rails-watch-list" target="_blank">CODE</a></em></p>
+        <p class="text-right"><em><a href="https://movie-watch-list-sae.herokuapp.com/" target="_blank">WEBSITE</a></em></p>
+        <%# <li class="tab-content tab-content-last typography">
         <div class="typography">
           <h1>Isaac Newton</h1>
           <p>English physicist and mathematician who is widely regarded as one of the most influential scientists of all time and as a key figure in the scientific revolution. His book Philosophiæ Naturalis Principia Mathematica ("Mathematical Principles of Natural Philosophy"), first published in 1687, laid the foundations for most of classical mechanics. Newton also made seminal contributions to optics and shares credit with Gottfried Leibniz for the invention of the infinitesimal calculus.</p>
@@ -37,7 +55,7 @@
           <p class="text-right"><em>Find out more about Isaac Newton from <a href="http://en.wikipedia.org/wiki/Isaac_Newton" target="_blank">Wikipedia</a>.</em></p>
         </div>
       </li> %>
-    </ul>
+      </ul>
+    </div>
+    <!--/ tabs -->
   </div>
-  <!--/ tabs -->
-</div>
