--- a/source/assets/stylesheets/components/_carousel.scss
+++ b/source/assets/stylesheets/components/_carousel.scss
@@ -51,20 +51,20 @@
   text-align: center;
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
+// /* Fading animation */
+// .fade {
+//   -webkit-animation-name: fade;
+//   -webkit-animation-duration: 1.5s;
+//   animation-name: fade;
+//   animation-duration: 1.5s;
+// }
 
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
+// @-webkit-keyframes fade {
+//   from {opacity: .4}
+//   to {opacity: 1}
+// }
 
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
+// @keyframes fade {
+//   from {opacity: .4}
+//   to {opacity: 1}
+// }
