--- a/source/partials/project.html.erb
+++ b/source/partials/project.html.erb
@@ -18,13 +18,13 @@
         <!-- Slideshow container -->
         <div class="slideshow-container">
           <!-- Full-width images with number and caption text -->
-          <div class="mySlides fade">
+          <div class="mySlides ">
             <%= image_tag '1-1.png', style: "width:100%" %>
           </div>
-          <div class="mySlides fade">
+          <div class="mySlides ">
             <%= image_tag '1-2.png', style: "width:100%" %>
           </div>
-          <div class="mySlides fade">
+          <div class="mySlides ">
             <%= image_tag '1-3.png', style: "width:100%" %>
           </div>
           <!-- Next and previous buttons -->
