Changed profile picture and adjusted about page

--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,11 +1,10 @@
 <div class="container" id="about">
   <div class="flex-container">
-    <div class="parent">
-      <img style="display: inline;" class="image1 img-square" src="assets/images/profile.jpg" alt="profile">
-      <img class="image2" src="assets/images/signature.png" alt="signature">
-    </div>
-    <p class="about-text">I am passionate about bringing other people’s visions to life while exceeding their expectations. I love the problem-solving aspect of design and web development and how both are
-      incorporated into our daily lives. I want to work in a meaningful, challenging, and international company that allows me to develop myself and have the scope for advancement.
+    <h1>初めまして! I'm Sae 👋</h1>
+    <img id="profile-img" src="assets/images/profile.jpg" alt="profile">
+    <p class="about-text">I am passionate about <em>bringing other people’s visions to life while exceeding their expectations</em>.<br>
+      I love the problem-solving aspect of design and web development and how both are
+      incorporated into our daily lives.
     </p>
   </div>
 </div>
