--- a/source/assets/stylesheets/components/_carousel.scss
+++ b/source/assets/stylesheets/components/_carousel.scss
@@ -1,70 +1,12 @@
-* {box-sizing:border-box}
+#carousel {
+    width: 100%;
+    height: 150px;
+    background-color: #ff0000;
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+    overflow: visible;
+    white-space:nowrap;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
+#carousel .slide {
+    display: inline-block;
 }
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: 24px;
-  height: 24px;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 50%;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-// /* Fading animation */
-// .fade {
-//   -webkit-animation-name: fade;
-//   -webkit-animation-duration: 1.5s;
-//   animation-name: fade;
-//   animation-duration: 1.5s;
-// }
-
-// @-webkit-keyframes fade {
-//   from {opacity: .4}
-//   to {opacity: 1}
-// }
-
-// @keyframes fade {
-//   from {opacity: .4}
-//   to {opacity: 1}
-// }
