--- a/source/assets/stylesheets/pages/_about.scss
+++ b/source/assets/stylesheets/pages/_about.scss
@@ -1,38 +1,37 @@
-.parent {
-  position: relative;
-  top: 0;
-  left: 0;
-}
-
-.image1 {
-  position: relative;
-
-}
-.image2 {
-  position: absolute;
-  bottom: -60px;
-  right: -8px;
-  width: 70%;
-}
-
 .flex-container{
-  display:flex;
-  margin-top: 32px;
-  padding: 42px 0;
+  text-align: center;
+}
+
+.flex-container h1{
+  margin-top: 10px;
 }
 
 .about-text{
-  display: flex;
-  align-items: center;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 32px;
   padding: 8px;
+  margin-top: 24px;
 }
 
+#profile-img{
+  width: 40%;
+  border-radius: 1%;
+}
 
-.img-square{
-  width: 320px;
-  height: 320px;
-  margin-right: 24px;
-  border-radius: 3%;
+@media (max-width: 720px) {
+  #profile-img{
+    width: 60%;
+    border-radius: 1%;
+  }
+}
+@media (max-width: 540px) {
+  .about-text{
+    font-size: 16px;
+    line-height: 24px;
+    padding: 2px;
+  }
+  #profile-img{
+    width: 250px;
+    border-radius: 1%;
+  }
 }
