--- a/source/partials/project.html.erb
+++ b/source/partials/project.html.erb
@@ -15,21 +15,25 @@
         <h1>renRAKU - Communicate More, Do Less</h1>
         <p>Role: Project Manager and Back End</p>
         <p>renRAKU replaces 連絡帳(Renrakuchou), paper note books that teachers in Japan use to communicate with parents. It allows writing daily notes to parents/teachers, uploading of schedules, creation of school/class events, posting grades for individual students, and scheduling of parent/teacher meetings.</p>
-        <!-- Slideshow container -->
-        <div class="slideshow-container">
-          <!-- Full-width images with number and caption text -->
-          <div class="mySlides ">
-            <%= image_tag '1-1.png', style: "width:100%" %>
+        <div id="carousel">
+          <div class="slide">
+            <%= image_tag '2-1.png', style: "width:100%" %>
           </div>
-          <div class="mySlides ">
-            <%= image_tag '1-2.png', style: "width:100%" %>
+          <div class="slide">
+            <%= image_tag '2-2.png', style: "width:100%" %>
           </div>
-          <div class="mySlides ">
-            <%= image_tag '1-3.png', style: "width:100%" %>
+          <div class="slide">
+            <%= image_tag '2-3.png', style: "width:100%" %>
           </div>
-          <!-- Next and previous buttons -->
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <div class="slide">
+            <%= image_tag '2-4.png', style: "width:100%" %>
+          </div>
+          <div class="slide">
+            <%= image_tag '2-5.png', style: "width:100%" %>
+          </div>
+          <div class="slide">
+            <%= image_tag '2-6.png', style: "width:100%" %>
+          </div>
         </div>
         <p class="text-right"><em><a href="https://github.com/teslazonda/renRAKU" target="_blank">CODE</a></em></p>
         <p class="text-right"><em><a href="https://www.renrakuchou.com/" target="_blank">WEBSITE</a></em></p>
