Project layout changed

--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -3,7 +3,7 @@
     <h1>初めまして! I'm Sae 👋</h1>
     <img id="profile-img" src="assets/images/profile.jpg" alt="profile">
     <p class="about-text">I am passionate about <em>bringing other people’s visions to life while exceeding their expectations</em>.<br>
-      I love the problem-solving aspect of design and web development and how both are
+      I love the problem-solving aspect of design/web development and how both are
       incorporated into our daily lives.
     </p>
   </div>
