--- a/source/assets/stylesheets/components/_carousel.scss
+++ b/source/assets/stylesheets/components/_carousel.scss
@@ -1,12 +1,18 @@
-#carousel {
-    width: 100%;
-    height: 150px;
-    background-color: #ff0000;
-
-    overflow: visible;
-    white-space:nowrap;
+.carousel-container {
+  overflow: hidden;
 }
 
-#carousel .slide {
-    display: inline-block;
+.sliding-background {
+  background: url("..path/to/image") repeat-x;
+  width: 5076px;
+  animation: slide 30s linear infinite;
+}
+
+@keyframes slide{
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  100% {
+    transform: translate3d(-1692px, 0, 0);
+  }
 }
