Updated projects section

--- a/source/partials/_navbar.html.erb
+++ b/source/partials/_navbar.html.erb
@@ -11,7 +11,7 @@
         <a class="smooth" href="#about">About</a>
       </li>
       <li class="nav-item">
-        <a class="smooth" href="#">Projects</a>
+        <a class="smooth" href="#projects">Projects</a>
       </li>
       <li class="nav-item">
         <a class="smooth" href="#">Contact</a>
