--- a/source/partials/project.html.erb
+++ b/source/partials/project.html.erb
@@ -3,11 +3,11 @@
   <%# Project 1 %>
   <ul class="project-container">
     <h1>renRAKU</h1>
-    <h2>Role: Project Manager</h2>
+    <h2>ROLE: Project Manager and Full-Stack Developer</h2>
     <p>renRAKU replaces 連絡帳(Renrakuchou), paper note books that teachers in Japan use to communicate with parents. It allows writing daily notes to parents/teachers, uploading of schedules, creation of school/class events, posting grades for individual students, and scheduling of parent/teacher meetings.</p>
     <div class="carousel-container">
       <div class="sliding-background">
-        <%= image_tag '2-1.png', style: "height:400px" %><%= image_tag '2-2.png', style: "height:400px" %><%= image_tag '2-3.png', style: "height:400px" %><%= image_tag '2-4.png', style: "height:400px" %><%= image_tag '2-5.png', style: "height:400px" %><%= image_tag '2-6.png', style: "height:400px" %>
+        <%= image_tag '2-2.png', style: "height:400px" %><%= image_tag '2-3.png', style: "height:400px" %><%= image_tag '2-4.png', style: "height:400px" %><%= image_tag '2-5.png', style: "height:400px" %><%= image_tag '2-6.png', style: "height:400px" %>
       </div>
     </div>
     <a href="https://github.com/teslazonda/renRAKU" target="_blank"><i class="fab fa-github"></i></a>
@@ -16,17 +16,22 @@
   <%# Project 2 %>
   <ul class="project-container">
     <h1>Doppelganger Finder - AirBnB Clone</h1>
-    <p>Role: Project Manager and Back End</p>
-    <p>An Airbnb clone for renting celebrity look-a-likes</p>
-    <p class="text-right"><em><a href="https://github.com/teslazonda/Doppelganger-Finder" target="_blank">CODE</a></em></p>
-    <p class="text-right"><em><a href="https://doppelganger-finder.herokuapp.com/" target="_blank">WEBSITE</a></em></p>
+    <h2>ROLE: Project Manager and Full-Stack Developer</h2>
+    <p>An Airbnb clone for renting celebrity look-a-likes.</p>
+    <div class="carousel-container">
+      <div class="sliding-background">
+        <%= image_tag '1-1.png', style: "height:400px" %><%= image_tag '1-2.png', style: "height:400px" %><%= image_tag '1-3.png', style: "height:400px" %><%= image_tag '1-4.png', style: "height:400px" %>
+      </div>
+    </div>
+    <a href="https://github.com/teslazonda/Doppelganger-Finder" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://doppelganger-finder.herokuapp.com/" target="_blank"><i class="fas fa-laptop"></i></a>
   </ul>
   <%# Project 3 %>
   <ul class="project-container">
     <h1>Movies Watch-List</h1>
-    <p>Role: Full-Stack</p>
+    <h2>ROLE: Full-Stack Developer</h2>
     <p>You can organize your favorite movies in genre lists, add ratings, and add comments.</p>
-    <p class="text-right"><em><a href="https://github.com/Sae-S/rails-watch-list" target="_blank">CODE</a></em></p>
-    <p class="text-right"><em><a href="https://movie-watch-list-sae.herokuapp.com/" target="_blank">WEBSITE</a></em></p>
+    <a href="https://github.com/Sae-S/rails-watch-list" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://movie-watch-list-sae.herokuapp.com/" target="_blank"><i class="fas fa-laptop"></i></a>
   </ul>
 </div>
