Added contact me section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,4 +5,4 @@
 <!-- Projects Section -->
 <%= partial 'partials/project' %>
 <!-- Contact Section -->
-<%#= partial 'partials/contact' %>
+<%= partial 'partials/contact' %>
