--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -2,6 +2,6 @@
   <div class="main-container" id="banner">
     <h1>A Bilingual <a href="https://saeshikiji.myportfolio.com/work" target=_blank>Graphic Designer</a></h1>
     <h1><span id="animate"></span></h1>
-    <h2>Based in Tokyo, Japan</h2>
+    <h2>Honolulu, Hawaii   ---   Tokyo, Japan</h2>
   </div>
 </div>
