--- a/source/partials/_navbar.html.erb
+++ b/source/partials/_navbar.html.erb
@@ -14,7 +14,7 @@
         <a class="smooth" href="#projects">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="smooth" href="#">Contact</a>
+        <a class="smooth" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
