--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,5 +1,5 @@
 <div class="fullscreen">
-  <div class="main-container" id="banner">
+  <div class="main-container fade-in" id="banner">
     <ul>
       <li>
         <h1>A Bilingual <a href="https://saeshikiji.myportfolio.com/work" target=_blank>Graphic Designer</a></h1>
