--- a/source/partials/contact.erb
+++ b/source/partials/contact.erb
@@ -1,6 +1,6 @@
 <div class="contact-container" id="contact">
   <h1>Get in Touch</h1>
-  <h2>saeshikiji@gmail.com</h2>
+  <h2><a href="mailto:saeshikiji@gmail.com" target="_blank">saeshikiji@gmail.com</a></h2>
   <div class="container">
     <div class="row">
       <div class="col-sm">
