--- a/source/partials/project.html.erb
+++ b/source/partials/project.html.erb
@@ -3,35 +3,40 @@
   <%# Project 1 %>
   <ul class="project-container">
     <h1>renRAKU</h1>
-    <h2>ROLE: Project Manager and Full-Stack Developer</h2>
+    <h2>PRIMARY ROLE: Project Manager  SECONDARY ROLE: Full-Stack Developer</h2>
     <p>renRAKU replaces 連絡帳(Renrakuchou), paper note books that teachers in Japan use to communicate with parents. It allows writing daily notes to parents/teachers, uploading of schedules, creation of school/class events, posting grades for individual students, and scheduling of parent/teacher meetings.</p>
-    <div class="carousel-container">
-      <div class="sliding-background">
-        <%= image_tag '2-2.png', style: "height:400px" %><%= image_tag '2-3.png', style: "height:400px" %><%= image_tag '2-4.png', style: "height:400px" %><%= image_tag '2-5.png', style: "height:400px" %><%= image_tag '2-6.png', style: "height:400px" %>
+    <%= image_tag 'mockup_renraku.png', style: "width:60%" %>
+    <div class="container">
+      <div class="row">
+        <div class="col"><a href="https://github.com/teslazonda/renRAKU" target="_blank">code</a></div>
+        <div class="col"><a href="https://www.renrakuchou.com/" target="_blank">link</a></div>
       </div>
     </div>
-    <a href="https://github.com/teslazonda/renRAKU" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://www.renrakuchou.com/" target="_blank"><i class="fas fa-laptop"></i></a>
   </ul>
   <%# Project 2 %>
   <ul class="project-container">
     <h1>Doppelganger Finder - AirBnB Clone</h1>
-    <h2>ROLE: Project Manager and Full-Stack Developer</h2>
+    <h2>PRIMARY ROLE: Project Manager  SECONDARY ROLE: Full-Stack Developer</h2>
     <p>An Airbnb clone for renting celebrity look-a-likes.</p>
-    <div class="carousel-container">
-      <div class="sliding-background">
-        <%= image_tag '1-1.png', style: "height:400px" %><%= image_tag '1-2.png', style: "height:400px" %><%= image_tag '1-3.png', style: "height:400px" %><%= image_tag '1-4.png', style: "height:400px" %>
+    <%= image_tag 'mockup.png', style: "width:60%" %>
+    <div class="container">
+      <div class="row">
+        <div class="col"><a href="https://github.com/teslazonda/Doppelganger-Finder" target="_blank">code</a></div>
+        <div class="col"><a href="https://doppelganger-finder.herokuapp.com/" target="_blank">link</a></div>
       </div>
     </div>
-    <a href="https://github.com/teslazonda/Doppelganger-Finder" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://doppelganger-finder.herokuapp.com/" target="_blank"><i class="fas fa-laptop"></i></a>
   </ul>
   <%# Project 3 %>
   <ul class="project-container">
     <h1>Movies Watch-List</h1>
-    <h2>ROLE: Full-Stack Developer</h2>
+    <h2>PRIMARY ROLE: Full-Stack Developer</h2>
     <p>You can organize your favorite movies in genre lists, add ratings, and add comments.</p>
-    <a href="https://github.com/Sae-S/rails-watch-list" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://movie-watch-list-sae.herokuapp.com/" target="_blank"><i class="fas fa-laptop"></i></a>
+    <%= image_tag 'mockup_movies.png', style: "width:60%" %>
+    <div class="container">
+      <div class="row">
+        <div class="col"><a href="https://github.com/Sae-S/rails-watch-list" target="_blank">code</a></div>
+        <div class="col"><a href="https://movie-watch-list-sae.herokuapp.com/" target="_blank">link</a></div>
+      </div>
+    </div>
   </ul>
 </div>
