--- a/source/assets/stylesheets/pages/_contact.scss
+++ b/source/assets/stylesheets/pages/_contact.scss
@@ -3,19 +3,19 @@
   align-items: center;
   justify-content: center;
   background-color: $beige;
-  padding: 24px;
+  padding: 32px;
   h1{
-    margin-top: 32px;
-    color: $blue
+    color: $blue;
+    margin-bottom: 0;
   }
   h2{
     font-style: italic;
-    color: $blue
+    color: $blue;
+    margin-bottom: 24px;
   }
   a{
     background-color: transparent;
     font-size: 24px;
-    margin: 16px;
     color: $blue;
     &:hover{
       color: $orange;
