--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,6 +8,7 @@
     <!-- For Bootstrap responsiveness -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content=”assets/images/web-portfolio.png” />
     <title>Portfolio</title>
     <!-- Comment this out when meta tags configured -->
     <%#= display_meta_tags %>
