Added meta tags

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,8 +8,14 @@
     <!-- For Bootstrap responsiveness -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content=”assets/images/web-portfolio.png” />
-    <title>Sae Shikiji's Web Development Portfolio</title>
+    <title>Sae Shikiji - Web Developer and Graphic Designer</title>
+    <meta name="description" content="Full-stack web developer living in Tokyo. Come check out my latest projects.">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Web Developer, Ruby, Ruby on Rails">
+    <meta property="og:url" content="https://saeshikiji.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content='../assets/images/web-portfolio.png' />
+    <meta property="og:title" content='Sae Shikiji - Web Developer and Graphic Designer' />
+    <meta property="og:description" content='A bilingual graphic designer that can code! Come check out my latest projects.' />
     <!-- Comment this out when meta tags configured -->
     <%#= display_meta_tags %>
     <%= favicon_tag 'favicon.ico' %>
