Updated projects section visuals

--- a/source/partials/project.html.erb
+++ b/source/partials/project.html.erb
@@ -3,9 +3,12 @@
   <%# Project 1 %>
   <ul class="project-container">
     <h1>renRAKU</h1>
-    <h2>PRIMARY ROLE: Project Manager  SECONDARY ROLE: Full-Stack Developer</h2>
-    <p>renRAKU replaces 連絡帳(Renrakuchou), paper note books that teachers in Japan use to communicate with parents. It allows writing daily notes to parents/teachers, uploading of schedules, creation of school/class events, posting grades for individual students, and scheduling of parent/teacher meetings.</p>
-    <%= image_tag 'mockup_renraku.png', style: "width:60%" %>
+    <h2>PRIMARY ROLE: Project Manager<br>
+      SECONDARY ROLE: Full-Stack Developer</h2>
+    <p>renRAKU replaces 連絡帳(Renrakuchou), correspondence notebooks, often shared between teachers and parents in Japan.<br>
+      It allows writing daily notes to parents/teachers, uploading of schedules, creation of school/class events,<br>
+      posting grades for individual students, and scheduling of parent/teacher meetings.</p>
+    <%= image_tag 'mockup_renraku.png', style: "width:50%" %>
     <div class="container">
       <div class="row">
         <div class="col"><a href="https://github.com/teslazonda/renRAKU" target="_blank">code</a></div>
@@ -15,10 +18,11 @@
   </ul>
   <%# Project 2 %>
   <ul class="project-container">
-    <h1>Doppelganger Finder - AirBnB Clone</h1>
-    <h2>PRIMARY ROLE: Project Manager  SECONDARY ROLE: Full-Stack Developer</h2>
+    <h1>Doppelganger Finder</h1>
+    <h2>PRIMARY ROLE: Project Manager<br>
+      SECONDARY ROLE: Full-Stack Developer</h2>
     <p>An Airbnb clone for renting celebrity look-a-likes.</p>
-    <%= image_tag 'mockup.png', style: "width:60%" %>
+    <%= image_tag 'mockup.png', style: "width:50%" %>
     <div class="container">
       <div class="row">
         <div class="col"><a href="https://github.com/teslazonda/Doppelganger-Finder" target="_blank">code</a></div>
@@ -31,7 +35,7 @@
     <h1>Movies Watch-List</h1>
     <h2>PRIMARY ROLE: Full-Stack Developer</h2>
     <p>You can organize your favorite movies in genre lists, add ratings, and add comments.</p>
-    <%= image_tag 'mockup_movies.png', style: "width:60%" %>
+    <%= image_tag 'mockup_movies.png', style: "width:50%" %>
     <div class="container">
       <div class="row">
         <div class="col"><a href="https://github.com/Sae-S/rails-watch-list" target="_blank">code</a></div>
