--- a/source/assets/stylesheets/pages/_project.scss
+++ b/source/assets/stylesheets/pages/_project.scss
@@ -8,9 +8,9 @@
 .project-container{
   text-align: center;
   align-items: center;
-  padding: 8px;
+  padding: 10px;
   h1{
-    margin: 16px 32px;
+    margin: 16px 48px;
     font-size: xx-large;
     border-bottom: solid 1px ;
   }
@@ -21,11 +21,11 @@
   }
   p{
     margin: 24px 32px;
+    margin: 16px 42px;
   }
   a{
     background-color: transparent;
     font-size: 32px;
-    margin: 16px;
     &:hover{
       color: $orange;
     }
@@ -37,7 +37,9 @@
 }
 
 .col a{
-  font-size: 24px;
+  font-size: 20px;
+
+  font-style: italic;
 }
 
 @media (max-width: 960px) {
@@ -52,6 +54,6 @@
 }
 @media (max-width: 540px) {
   .col a{
-    font-size: 20px;
+    font-size: 18px;
   }
 }
