--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -2,7 +2,8 @@
   <div class="main-container fade-in" id="banner">
     <ul>
       <li>
-        <h1>A Bilingual <a href="https://saeshikiji.myportfolio.com/work" target=_blank><br>
+        <h1>A Bilingual<br>
+          <a href="https://saeshikiji.myportfolio.com/work" target=_blank>
             Graphic Designer</a></h1>
       </li>
       <li>
