Changed about me text

--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -4,7 +4,8 @@
       <li>
         <h1>A Bilingual<br>
           <a href="https://saeshikiji.myportfolio.com/work" target=_blank>
-            Graphic Designer</a></h1>
+            Graphic Designer</a><br>
+          and </h1>
       </li>
       <li>
         <h1><span id="animate"></span></h1>
