--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,6 +1,7 @@
 <div class="container" id="about">
   <div class="flex-container">
-    <h1>初めまして! I'm Sae 👋</h1>
+    <h1>初めまして!<br>
+      My name is Sae 👋</h1>
     <img class='fade-in' id="profile-img" src="assets/images/profile.jpg" alt="profile">
     <p class="about-text">I am passionate about <em>bringing other people’s visions to life while exceeding their expectations</em>.<br>
       I love the problem-solving aspect of design/web development and how both are
