--- a/source/partials/project.html.erb
+++ b/source/partials/project.html.erb
@@ -8,7 +8,7 @@
     <p>renRAKU replaces 連絡帳(Renrakuchou), correspondence notebooks, often shared between teachers and parents in Japan.<br>
       It allows writing daily notes to parents/teachers, uploading of schedules, creation of school/class events,<br>
       posting grades for individual students, and scheduling of parent/teacher meetings.</p>
-    <%= image_tag 'mockup_renraku.png', style: "width:50%" %>
+    <%= link_to (image_tag 'mockup_renraku.png', style: "width:50%"), "https://www.renrakuchou.com/", :target => "_blank" %>
     <div class="container">
       <div class="row">
         <div class="col"><a href="https://github.com/teslazonda/renRAKU" target="_blank">code</a></div>
@@ -22,7 +22,7 @@
     <h2>PRIMARY ROLE: Project Manager<br>
       SECONDARY ROLE: Full-Stack Developer</h2>
     <p>An Airbnb clone for renting celebrity look-a-likes.</p>
-    <%= image_tag 'mockup.png', style: "width:50%" %>
+    <%= link_to (image_tag 'mockup.png', style: "width:50%"), "https://doppelganger-finder.herokuapp.com/", :target => "_blank" %>
     <div class="container">
       <div class="row">
         <div class="col"><a href="https://github.com/teslazonda/Doppelganger-Finder" target="_blank">code</a></div>
@@ -35,7 +35,7 @@
     <h1>Movies Watch-List</h1>
     <h2>PRIMARY ROLE: Full-Stack Developer</h2>
     <p>You can organize your favorite movies in genre lists, add ratings, and add comments.</p>
-    <%= image_tag 'mockup_movies.png', style: "width:50%" %>
+    <%= link_to (image_tag 'mockup_movies.png', style: "width:50%"), "https://movie-watch-list-sae.herokuapp.com/", :target => "_blank" %>
     <div class="container">
       <div class="row">
         <div class="col"><a href="https://github.com/Sae-S/rails-watch-list" target="_blank">code</a></div>
