Changed github link for two projects

--- a/source/partials/project.html.erb
+++ b/source/partials/project.html.erb
@@ -11,7 +11,7 @@
     <%= link_to (image_tag 'mockup_renraku.png', style: "width:50%"), "https://www.renrakuchou.com/", :target => "_blank" %>
     <div class="container">
       <div class="row">
-        <div class="col"><a href="https://github.com/teslazonda/renRAKU" target="_blank">code</a></div>
+        <div class="col"><a href="https://github.com/Sae-S/renRAKU" target="_blank">code</a></div>
         <div class="col"><a href="https://www.renrakuchou.com/" target="_blank">link</a></div>
       </div>
     </div>
@@ -25,7 +25,7 @@
     <%= link_to (image_tag 'mockup.png', style: "width:50%"), "https://doppelganger-finder.herokuapp.com/", :target => "_blank" %>
     <div class="container">
       <div class="row">
-        <div class="col"><a href="https://github.com/teslazonda/Doppelganger-Finder" target="_blank">code</a></div>
+        <div class="col"><a href="https://github.com/Sae-S/Doppelganger-Finder" target="_blank">code</a></div>
         <div class="col"><a href="https://doppelganger-finder.herokuapp.com/" target="_blank">link</a></div>
       </div>
     </div>
