Added youtube link

--- a/source/partials/project.html.erb
+++ b/source/partials/project.html.erb
@@ -12,6 +12,7 @@
     <div class="container">
       <div class="row">
         <div class="col"><a href="https://github.com/Sae-S/renRAKU" target="_blank">code</a></div>
+        <div class="col"><a href="https://youtu.be/z-8DkUq4SyA?t=1103" target="_blank">Explanation Video</a></div>
         <div class="col"><a href="https://www.renrakuchou.com/" target="_blank">link</a></div>
       </div>
     </div>
