Added Beyond Bar Project

--- a/source/partials/project.html.erb
+++ b/source/partials/project.html.erb
@@ -1,5 +1,18 @@
 <div class="page" id="projects">
   <h1>WEB APP PROJECTS</h1>
+  <%# Project 4 %>
+  <ul class="project-container">
+    <h1>BEYOND BAR</h1>
+    <h2>PRIMARY ROLE: Full-Stack Developer</h2>
+    <p>BEYOND BAR is a career change support service lead by BEYOND CAFE Co., Ltd.</p>
+    <%= link_to (image_tag 'mockup_beyondbar.png', style: "width:50%"), "https://movie-watch-list-sae.herokuapp.com/", :target => "_blank" %>
+    <div class="container">
+      <div class="row">
+        <div class="col"><a href="https://github.com/Sae-S/Beyond-Bar" target="_blank">code</a></div>
+        <div class="col"><a href="https://beyondbar.jp/" target="_blank">link</a></div>
+      </div>
+    </div>
+  </ul>
   <%# Project 1 %>
   <ul class="project-container">
     <h1>renRAKU</h1>
